books/projects/rac/tests/yaml_test/program_structure/recursive-call.ref.stderr
recursive-call.cpp:3 (9-10): syntax error, unexpected ';', expecting '{'
 3 | int foo();
   |          ^
