books/projects/rac/tests/yaml_test/program_structure/recursive-call.cpp
// RAC begin

int foo();

int foo()
{
  return foo();
}

// RAC end
